# mbxai-srv-template

./: .gitignore  README.md  UI_IMPROVEMENTS_SUMMARY.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  README.md  UI_QUICKSTART.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.cursor/rules/: mibexx.mdc
{{cookiecutter.project_slug}}/kubernetes/: mbxai-resource.yaml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: config.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/api/: __init__.py  definition.py  echo.py  run.py  server.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/api/project/: __init__.py  api.py  demo.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/api/routes/: weather.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/clients/: mcp.py  mcp_client.py  models.py  openrouter.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/mcp/: __init__.py  app.py  auth.py  run.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/mcp/project/: weather.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/project/: api.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/ui/: UI_COMPONENTS_README.md  app.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/utils/: __init__.py  celery_client.py  client.py  vector.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/worker/: __init__.py  run.py  tasks.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_api.py
(+13 files in other folders)
